# ide-pre-commit-hooks

./: .pre-commit-hooks.yaml  README.md  setup.cfg
.github/: CODEOWNERS
pre_commit_hooks/: gitleaks.py  kics.py  vscode.py
pre_commit_hooks/utils/: controls.py  git.py  report.py
