[metadata]
name = jit_ide_pre_commit_hooks
version = 0.0.3
url = https://github.com/jitsecurity/ide-pre-commit-hooks
license = MIT
license_file = LICENSE

[options]
python_requires = >=3.7

[options.entry_points]
console_scripts =
    vscode = pre_commit_hooks.vscode:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults